// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedArticleSlice error checks empty slice 1`] = `<DocumentFragment />`;

exports[`RelatedArticleSlice error checks invalid slicename 1`] = `<DocumentFragment />`;

exports[`RelatedArticleSlice renders 1 1`] = `
<DocumentFragment>
  <div
    class="RelatedArticleSlice sc-bdVaJa OXMAI"
  >
    <div
      class="heading"
    >
      Related Articles
    </div>
    <div
      class="shared-styles__SliceContainer-sc-ismxwo-0 styles__SliceContainer-sc-b33h2c-0 gMFYXX"
    >
      <div
        class="shared-styles__SlotContainer-sc-ismxwo-1 styles__SlotContainer-sc-b33h2c-1 oEwup"
      >
        <article
          class="shared-styles__ArticleContainer-sc-1kek94e-0 jgpbxb"
        >
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 jOKfAL"
          >
            <div
              class="styles__ImageContainer-sc-8lglkt-0 hmOUZw"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <div
                  class="styles__ImageRatio-sc-8lglkt-1 kDSgGC"
                >
                  <div
                    class="styles__LazyContainer-sc-qsbah5-0 jExiaS"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3159%2C0%2C293&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 jOKfAL"
          >
            <p
              class="shared-styles__Label-sc-1kek94e-2 jGUcDq"
            >
              Comment
            </p>
            <div
              class="styles__HeadlineContainer-sc-k0mgwi-0 jmCdJQ"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <h3>
                  How Gymshark recruits the best young people
                </h3>
              </a>
            </div>
            <p
              class="styles__DateTime-sc-1p1alcs-0 hyeEhI"
            >
              May 05 2021, 12.01am
            </p>
            <p
              class="styles__Byline-sc-1p1alcs-1 dgenH"
            >
              Steve Hewitt
            </p>
          </div>
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RelatedArticleSlice renders 2 1`] = `
<DocumentFragment>
  <div
    class="RelatedArticleSlice sc-bdVaJa OXMAI"
  >
    <div
      class="heading"
    >
      Related Articles
    </div>
    <div
      class="shared-styles__SliceContainer-sc-ismxwo-0 eYoCuK"
    >
      <div
        class="shared-styles__SlotContainer-sc-ismxwo-1 styles__SlotContainer-sc-z7ncw3-0 dPjFnq"
      >
        <article
          class="shared-styles__ArticleContainer-sc-1kek94e-0 hYGxtr"
        >
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 jNutGa"
          >
            <div
              class="styles__ImageContainer-sc-8lglkt-0 CuqlR"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <div
                  class="styles__ImageRatio-sc-8lglkt-1 bMAlMW"
                >
                  <div
                    class="styles__LazyContainer-sc-qsbah5-0 jExiaS"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3744%2C0%2C0&resize=80"
                    />
                  </div>
                </div>
                <div
                  class="styles__ImageRatio-sc-8lglkt-1 lhnvcZ"
                >
                  <div
                    class="styles__LazyContainer-sc-qsbah5-0 jExiaS"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3159%2C0%2C293&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 jNutGa"
          >
            <p
              class="shared-styles__Label-sc-1kek94e-2 jGUcDq"
            >
              Comment
            </p>
            <div
              class="styles__HeadlineContainer-sc-k0mgwi-0 fwCYwL"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <h3>
                  How Gymshark recruits the best young people
                </h3>
              </a>
            </div>
          </div>
        </article>
      </div>
      <div
        class="shared-styles__SlotContainer-sc-ismxwo-1 styles__SlotContainer-sc-z7ncw3-0 dPjFnq"
      >
        <article
          class="shared-styles__ArticleContainer-sc-1kek94e-0 hYGxtr"
        >
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 jNutGa"
          >
            <div
              class="styles__ImageContainer-sc-8lglkt-0 CuqlR"
            >
              <a
                href="https://www.thetimes.co.uk/article/susie-ma-my-recipe-for-self-belief-pstccwdxr"
              >
                <div
                  class="styles__ImageRatio-sc-8lglkt-1 bMAlMW"
                >
                  <div
                    class="styles__LazyContainer-sc-qsbah5-0 jExiaS"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fcbfae118-aef3-11eb-9dc9-5a05c2885d62.jpg?crop=4126%2C2750%2C14%2C1764&resize=80"
                    />
                  </div>
                </div>
                <div
                  class="styles__ImageRatio-sc-8lglkt-1 lhnvcZ"
                >
                  <div
                    class="styles__LazyContainer-sc-qsbah5-0 jExiaS"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fcbfae118-aef3-11eb-9dc9-5a05c2885d62.jpg?crop=4105%2C2309%2C42%2C1828&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 jNutGa"
          >
            <div
              class="styles__HeadlineContainer-sc-k0mgwi-0 fwCYwL"
            >
              <a
                href="https://www.thetimes.co.uk/article/susie-ma-my-recipe-for-self-belief-pstccwdxr"
              >
                <h3>
                  Susie Ma: My recipe for self-belief
                </h3>
              </a>
            </div>
          </div>
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RelatedArticleSlice renders 3 1`] = `
<DocumentFragment>
  <div
    class="RelatedArticleSlice sc-bdVaJa OXMAI"
  >
    <div
      class="heading"
    >
      Related Articles
    </div>
    <div
      class="shared-styles__SliceContainer-sc-ismxwo-0 styles__SliceContainer-sc-fss0bs-0 gBTIrv"
    >
      <div
        class="shared-styles__SlotContainer-sc-ismxwo-1 styles__SlotContainerLead-sc-fss0bs-1 eDQhZS"
      >
        <article
          class="shared-styles__ArticleContainer-sc-1kek94e-0 hYGxtr"
        >
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 jNutGa"
          >
            <div
              class="styles__ImageContainer-sc-8lglkt-0 CuqlR"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <div
                  class="styles__ImageRatio-sc-8lglkt-1 bMAlMW"
                >
                  <div
                    class="styles__LazyContainer-sc-qsbah5-0 jExiaS"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3744%2C0%2C0&resize=80"
                    />
                  </div>
                </div>
                <div
                  class="styles__ImageRatio-sc-8lglkt-1 lhnvcZ"
                >
                  <div
                    class="styles__LazyContainer-sc-qsbah5-0 jExiaS"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7547ab46-ace4-11eb-bda6-057976012425.jpg?crop=5616%2C3159%2C0%2C293&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 jNutGa"
          >
            <p
              class="shared-styles__Label-sc-1kek94e-2 jGUcDq"
            >
              Comment
            </p>
            <div
              class="styles__HeadlineContainer-sc-k0mgwi-0 ebZtgV"
            >
              <a
                href="https://www.thetimes.co.uk/article/how-to-recruit-the-best-young-people-to-your-business-5kksq826t"
              >
                <h3>
                  How Gymshark recruits the best young people
                </h3>
              </a>
            </div>
          </div>
        </article>
      </div>
      <div
        class="shared-styles__SlotContainer-sc-ismxwo-1 styles__StackedColumn-sc-fss0bs-2 YmMPp"
      >
        <div
          class="shared-styles__SlotContainer-sc-ismxwo-1 cLkQgn"
        >
          <article
            class="shared-styles__ArticleContainer-sc-1kek94e-0 hYGxtr"
          >
            <div
              class="shared-styles__SideBySideColumn-sc-1kek94e-1 jNutGa"
            >
              <div
                class="styles__ImageContainer-sc-8lglkt-0 CuqlR"
              >
                <a
                  href="https://www.thetimes.co.uk/article/susie-ma-my-recipe-for-self-belief-pstccwdxr"
                >
                  <div
                    class="styles__ImageRatio-sc-8lglkt-1 gbnXjW"
                  >
                    <div
                      class="styles__LazyContainer-sc-qsbah5-0 jExiaS"
                    >
                      <img
                        alt=""
                        src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fcbfae118-aef3-11eb-9dc9-5a05c2885d62.jpg?crop=4126%2C2750%2C14%2C1764&resize=80"
                      />
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="shared-styles__SideBySideColumn-sc-1kek94e-1 jNutGa"
            >
              <div
                class="styles__HeadlineContainer-sc-k0mgwi-0 hVDHIO"
              >
                <a
                  href="https://www.thetimes.co.uk/article/susie-ma-my-recipe-for-self-belief-pstccwdxr"
                >
                  <h3>
                    Susie Ma: My recipe for self-belief
                  </h3>
                </a>
              </div>
            </div>
          </article>
        </div>
        <article
          class="shared-styles__ArticleContainer-sc-1kek94e-0 hwrniB"
        >
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 eKXwdB"
          >
            <div
              class="styles__ImageContainer-sc-8lglkt-0 dxqTQU"
            >
              <a
                href="https://www.thetimes.co.uk/article/why-business-is-eating-software-swl6j8jj3"
              >
                <div
                  class="styles__ImageRatio-sc-8lglkt-1 gbnXjW"
                >
                  <div
                    class="styles__LazyContainer-sc-qsbah5-0 jExiaS"
                  >
                    <img
                      alt=""
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd67cb358-cce1-11eb-9bfa-a3bc386e6928.jpg?crop=1175%2C784%2C277%2C106&resize=80"
                    />
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="shared-styles__SideBySideColumn-sc-1kek94e-1 eKXwdB"
          >
            <div
              class="styles__HeadlineContainer-sc-k0mgwi-0 ivTXYW"
            >
              <a
                href="https://www.thetimes.co.uk/article/why-business-is-eating-software-swl6j8jj3"
              >
                <h3>
                  Why business is eating software
                </h3>
              </a>
            </div>
            <p
              class="styles__TimeSince-sc-p3h2iu-1 hWZJfI"
            >
              3 days ago
            </p>
          </div>
        </article>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
